--- a/core/schema/project/episodes/sequences/sequence.yml
+++ b/core/schema/project/episodes/sequences/sequence.yml
@@ -22,5 +22,4 @@ entity_type: "Sequence"
 # three fields: path, relation and values
 # (this is std shotgun API syntax)
 # any values starting with $ are resolved into path objects
-filters: [ { "path": "project", "relation": "is", "values": [ "$project" ] } ]
-
+filters: [ { "path": "episode", "relation": "is", "values": [ "$episode" ] } ]
